# pil-lite

./: .gitignore  .hgignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README.rst  changelog.txt  mypy.ini  notes.rst  pyproject.toml  setup.py
PilLite/: Image.py  __about__.py  __init__.py
src/: CMakeLists.txt  image.cpp  image.h  lib.c  lib.h  py_ext_build.py  py_image.cpp  types.h
stub/PilLiteExt/: ffi.pyi  lib.pyi
test/: basic_test.py  test_basic.py  test_drawing.py  test_numpy.py
test/data/: image.tga  image.tif
